Create Senate Elections dataset

--- a/AllFiftyStates.ipynb
+++ b/AllFiftyStates.ipynb
@@ -55,6 +55,119 @@
     "import pandas\n",
     "import pathlib"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pandas.DataFrame(data=[], columns=[\"State\", \"Democratic\", \"Republican\", \"Other\", \"Year\"])\n",
+    "\n",
+    "csv_folder = pathlib.Path(\"./raw_csv/\")\n",
+    "\n",
+    "for filepath in csv_folder.iterdir():\n",
+    "    if filepath.suffix == \".csv\":\n",
+    "        year = filepath.stem\n",
+    "        \n",
+    "        table = pandas.read_csv(filepath)\n",
+    "        table[\"Year\"] = year\n",
+    "        \n",
+    "        df = df.append(table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To check our work, we verify that the `Year` column holds 8 unique values (one for each election cycle from 2002 to 2016):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count      419\n",
+       "unique       8\n",
+       "top       2016\n",
+       "freq        56\n",
+       "Name: Year, dtype: object"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Year'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning up NA values\n",
+    "\n",
+    "Our table contains some empty rows, because not every state has a Senate election each year. We also have empty rows for territories without representation, like Puerto Rico and the District of Columbia.\n",
+    "\n",
+    "We remove these empty records."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop all records for elections that didn't happen\n",
+    "df = df.dropna(how=\"all\", subset=(\"Democratic\", \"Republican\", \"Other\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For some elections where a party received no votes (e.g. unopposed races) the party's cell was left empty. This is parsed as `NaN` by pandas. We correct these NA values to zeros."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving the dataset\n",
+    "\n",
+    "Now that we have our desired dataset, we save it as `data.csv`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"./data.csv\", index=False) # omit the index, since it is meaningless"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis"
+   ]
   }
  ],
  "metadata": {
