--- a/AllFiftyStates.ipynb
+++ b/AllFiftyStates.ipynb
@@ -47,13 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pathlib\n",
+    "\n",
     "import geopandas\n",
-    "import pandas\n",
-    "import pathlib"
+    "import numpy\n",
+    "import pandas"
    ]
   },
   {
@@ -150,23 +152,434 @@
    "source": [
     "### Saving the dataset\n",
     "\n",
-    "Now that we have our desired dataset, we save it as `data.csv`."
+    "Now that we have our desired dataset, we save it as `senate_elections_2002-2016.csv`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"./data.csv\", index=False) # omit the index, since it is meaningless"
+    "df.to_csv(\"./senate_elections_2002-2016.csv\", index=False) # omit the index, since it is meaningless"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis"
+    "## Turnout-equalized averages\n",
+    "\n",
+    "If we average the vote totals for a given party in a given state across multiple elections, then high-turnout election years (especially presidential election years) will have higher weight in the average. To avoid this, we weight the individual vote totals to equalize turnout.\n",
+    "\n",
+    "If Party A received vote totals $A_1, A_2, \\ldots, A_n$ in a set of elections with total turnout $T_1, T_2, \\ldots, T_n$, then the _turnout-equalized average_ vote total for Party A is the average of $\\frac{A_1}{T_1}, \\frac{A_2}{T_2}, \\ldots, \\frac{A_n}{T_n}$, multiplied by the average of $T_1, T_2, \\ldots, T_n$\n",
+    "\n",
+    "In other words, it is the average proportion of the total turnout that A received, multiplied by the average total turnout."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def turnout_equalized_average(votes, totals):\n",
+    "    return numpy.mean(votes / totals) * numpy.mean(totals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now compute the turnout-equalized average for each party in each state.\n",
+    "\n",
+    "We remove the `Other` column of our dataset, and consider only the votes cast for the two major parties."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pandas.read_csv(\"./senate_elections_2002-2016.csv\")\n",
+    "\n",
+    "del df[\"Other\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Total\"] = df[\"Democratic\"] + df[\"Republican\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_equalized = df.groupby(\"State\").apply(lambda x: turnout_equalized_average(x[\"Democratic\"], x[\"Total\"]))\n",
+    "r_equalized = df.groupby(\"State\").apply(lambda x: turnout_equalized_average(x[\"Republican\"], x[\"Total\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Democratic</th>\n",
+       "      <th>Republican</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>State</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AK</th>\n",
+       "      <td>8.467030e+04</td>\n",
+       "      <td>1.459060e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AL</th>\n",
+       "      <td>4.797576e+05</td>\n",
+       "      <td>1.118517e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AR</th>\n",
+       "      <td>4.788881e+05</td>\n",
+       "      <td>3.982784e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AZ</th>\n",
+       "      <td>7.412544e+05</td>\n",
+       "      <td>1.162257e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CA</th>\n",
+       "      <td>7.347164e+06</td>\n",
+       "      <td>3.420230e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CO</th>\n",
+       "      <td>1.013775e+06</td>\n",
+       "      <td>9.601097e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CT</th>\n",
+       "      <td>7.646551e+05</td>\n",
+       "      <td>4.228693e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DE</th>\n",
+       "      <td>1.872916e+05</td>\n",
+       "      <td>1.087315e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FL</th>\n",
+       "      <td>3.169596e+06</td>\n",
+       "      <td>3.361887e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GA</th>\n",
+       "      <td>1.430835e+06</td>\n",
+       "      <td>1.842326e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HI</th>\n",
+       "      <td>2.706134e+05</td>\n",
+       "      <td>1.075479e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IA</th>\n",
+       "      <td>5.563418e+05</td>\n",
+       "      <td>7.107738e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ID</th>\n",
+       "      <td>1.337275e+05</td>\n",
+       "      <td>3.657857e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IL</th>\n",
+       "      <td>2.958296e+06</td>\n",
+       "      <td>1.881247e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IN</th>\n",
+       "      <td>8.281029e+05</td>\n",
+       "      <td>1.215912e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KS</th>\n",
+       "      <td>1.873474e+05</td>\n",
+       "      <td>6.928871e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KY</th>\n",
+       "      <td>6.740118e+05</td>\n",
+       "      <td>8.771818e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LA</th>\n",
+       "      <td>9.737904e+05</td>\n",
+       "      <td>1.164649e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MA</th>\n",
+       "      <td>1.681538e+06</td>\n",
+       "      <td>6.989719e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MD</th>\n",
+       "      <td>1.341980e+06</td>\n",
+       "      <td>7.852970e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ME</th>\n",
+       "      <td>1.737509e+05</td>\n",
+       "      <td>3.573149e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MI</th>\n",
+       "      <td>2.292543e+06</td>\n",
+       "      <td>1.501624e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MN</th>\n",
+       "      <td>1.286360e+06</td>\n",
+       "      <td>9.857948e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MO</th>\n",
+       "      <td>1.114884e+06</td>\n",
+       "      <td>1.163482e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MS</th>\n",
+       "      <td>2.598976e+05</td>\n",
+       "      <td>5.826438e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MT</th>\n",
+       "      <td>2.259798e+05</td>\n",
+       "      <td>1.736836e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NC</th>\n",
+       "      <td>1.582274e+06</td>\n",
+       "      <td>1.715229e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ND</th>\n",
+       "      <td>1.288433e+05</td>\n",
+       "      <td>1.524071e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NE</th>\n",
+       "      <td>2.449535e+05</td>\n",
+       "      <td>3.829843e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NH</th>\n",
+       "      <td>2.591800e+05</td>\n",
+       "      <td>3.074065e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NJ</th>\n",
+       "      <td>1.455481e+06</td>\n",
+       "      <td>1.110087e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NM</th>\n",
+       "      <td>3.446514e+05</td>\n",
+       "      <td>2.808814e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NV</th>\n",
+       "      <td>4.099350e+05</td>\n",
+       "      <td>3.792044e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NY</th>\n",
+       "      <td>4.297758e+06</td>\n",
+       "      <td>1.727053e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OH</th>\n",
+       "      <td>2.112879e+06</td>\n",
+       "      <td>2.573187e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OK</th>\n",
+       "      <td>4.318255e+05</td>\n",
+       "      <td>8.203677e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OR</th>\n",
+       "      <td>8.629343e+05</td>\n",
+       "      <td>6.502379e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PA</th>\n",
+       "      <td>2.524808e+06</td>\n",
+       "      <td>2.407560e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RI</th>\n",
+       "      <td>2.563444e+05</td>\n",
+       "      <td>1.195250e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SC</th>\n",
+       "      <td>6.615655e+05</td>\n",
+       "      <td>1.002444e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SD</th>\n",
+       "      <td>1.215727e+05</td>\n",
+       "      <td>1.996105e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TN</th>\n",
+       "      <td>7.131158e+05</td>\n",
+       "      <td>1.142199e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TX</th>\n",
+       "      <td>2.305898e+06</td>\n",
+       "      <td>3.392063e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UT</th>\n",
+       "      <td>3.231810e+05</td>\n",
+       "      <td>4.034772e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VA</th>\n",
+       "      <td>1.149343e+06</td>\n",
+       "      <td>1.469687e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VT</th>\n",
+       "      <td>7.225731e+04</td>\n",
+       "      <td>9.625869e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WA</th>\n",
+       "      <td>1.420194e+06</td>\n",
+       "      <td>1.082005e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WI</th>\n",
+       "      <td>1.178130e+06</td>\n",
+       "      <td>1.144009e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WV</th>\n",
+       "      <td>2.770867e+05</td>\n",
+       "      <td>1.923869e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WY</th>\n",
+       "      <td>6.275184e+04</td>\n",
+       "      <td>1.901016e+05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Democratic    Republican\n",
+       "State                            \n",
+       "AK     8.467030e+04  1.459060e+05\n",
+       "AL     4.797576e+05  1.118517e+06\n",
+       "AR     4.788881e+05  3.982784e+05\n",
+       "AZ     7.412544e+05  1.162257e+06\n",
+       "CA     7.347164e+06  3.420230e+06\n",
+       "CO     1.013775e+06  9.601097e+05\n",
+       "CT     7.646551e+05  4.228693e+05\n",
+       "DE     1.872916e+05  1.087315e+05\n",
+       "FL     3.169596e+06  3.361887e+06\n",
+       "GA     1.430835e+06  1.842326e+06\n",
+       "HI     2.706134e+05  1.075479e+05\n",
+       "IA     5.563418e+05  7.107738e+05\n",
+       "ID     1.337275e+05  3.657857e+05\n",
+       "IL     2.958296e+06  1.881247e+06\n",
+       "IN     8.281029e+05  1.215912e+06\n",
+       "KS     1.873474e+05  6.928871e+05\n",
+       "KY     6.740118e+05  8.771818e+05\n",
+       "LA     9.737904e+05  1.164649e+06\n",
+       "MA     1.681538e+06  6.989719e+05\n",
+       "MD     1.341980e+06  7.852970e+05\n",
+       "ME     1.737509e+05  3.573149e+05\n",
+       "MI     2.292543e+06  1.501624e+06\n",
+       "MN     1.286360e+06  9.857948e+05\n",
+       "MO     1.114884e+06  1.163482e+06\n",
+       "MS     2.598976e+05  5.826438e+05\n",
+       "MT     2.259798e+05  1.736836e+05\n",
+       "NC     1.582274e+06  1.715229e+06\n",
+       "ND     1.288433e+05  1.524071e+05\n",
+       "NE     2.449535e+05  3.829843e+05\n",
+       "NH     2.591800e+05  3.074065e+05\n",
+       "NJ     1.455481e+06  1.110087e+06\n",
+       "NM     3.446514e+05  2.808814e+05\n",
+       "NV     4.099350e+05  3.792044e+05\n",
+       "NY     4.297758e+06  1.727053e+06\n",
+       "OH     2.112879e+06  2.573187e+06\n",
+       "OK     4.318255e+05  8.203677e+05\n",
+       "OR     8.629343e+05  6.502379e+05\n",
+       "PA     2.524808e+06  2.407560e+06\n",
+       "RI     2.563444e+05  1.195250e+05\n",
+       "SC     6.615655e+05  1.002444e+06\n",
+       "SD     1.215727e+05  1.996105e+05\n",
+       "TN     7.131158e+05  1.142199e+06\n",
+       "TX     2.305898e+06  3.392063e+06\n",
+       "UT     3.231810e+05  4.034772e+05\n",
+       "VA     1.149343e+06  1.469687e+06\n",
+       "VT     7.225731e+04  9.625869e+04\n",
+       "WA     1.420194e+06  1.082005e+06\n",
+       "WI     1.178130e+06  1.144009e+06\n",
+       "WV     2.770867e+05  1.923869e+05\n",
+       "WY     6.275184e+04  1.901016e+05"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = pandas.DataFrame({\"Democratic\": d_equalized, \"Republican\": r_equalized})\n",
+    "\n",
+    "output.to_csv(\"./\")"
    ]
   }
  ],
