Finish, add license

--- a/AllFiftyStates.ipynb
+++ b/AllFiftyStates.ipynb
@@ -47800,7 +47800,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The colors in the choropleth maps are assigned by quintile. We note that here are as many states in the 64-75% range as there are in the 51-54% range."
+    "The colors in the choropleth maps are assigned by quintile."
    ]
   }
  ],
